tests/snapshots/runtime_error_fixtures/boundary_arg_string_into_int.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/boundary_arg_string_into_int.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 13] Compiling  Assert
[ 2 of 13] Compiling  Debug
[ 3 of 13] Compiling  Array
[ 4 of 13] Compiling  List
[ 5 of 13] Compiling  Either
[ 6 of 13] Compiling  IO
[ 7 of 13] Compiling  Math
[ 8 of 13] Compiling  Numeric
[ 9 of 13] Compiling  Option
[10 of 13] Compiling  Primops
[11 of 13] Compiling  String
[12 of 13] Compiling  BoundaryUnknown
• 1 error • examples/runtime_errors/boundary_arg_string_into_int.flx
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `typed_add`.

  examples/runtime_errors/boundary_arg_string_into_int.flx:8:11
  |
3 | fn typed_add(a: Int, b: Int) -> Int {
  | ----------------------------------- `typed_add` expects `Int` as the 1st parameter
4 |     a + b
5 | }
6 |
7 | let dynamic = RuntimeErrors.BoundaryUnknown.dynamic_string()
8 | typed_add(dynamic, 1)
  |           ^^^^^^^
  |           ------- this argument has type `String`

Note:
  expected argument type: Int
  found argument type: String
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `Int` value as the 1st argument.
